[package]
name = "next"
version = "0.1.0"
edition = "2024"
categories = ["mathematics"]
description = "Provides a trait to get the next sequential value"
keywords = ["next", "increment", "nextafter"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Seldom-SE/next"

[dependencies]
next_macros = { version = "0.1.0", path = "macros" }
