[package]
name = "next_macros"
version = "0.2.0-dev"
edition = "2024"
categories = ["mathematics"]
description = "Macros for `next`"
keywords = ["next", "increment", "nextafter"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Seldom-SE/next"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
